# Medium-Clone

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5a7e03f6a977_add_user_model.py  cbf8dcee3e50_add_is_superuser_column.py
app/: dependencies.py  middlewares.py  models.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/routers/: admin.py  articles.py  auth.py  digest.py  users.py
app/schemas/: article.py  auth.py  user.py
app/services/: digest.py  email.py
app/static/css/: style.css
app/tasks/: celery_config.py  celery_tasks.py
app/templates/: index.html
